syntax = "proto2";

package arcade.ffa.protocol;

import "datatype/uuid.proto";
import "google/protobuf/timestamp.proto";
import "arcade/ffa/entity/player_stats.proto";

service FFAPlayerStats {
    rpc RetrieveData (FFAPlayerStatsDataRequest) returns (FFAPlayerStatsDataReply);

    rpc ModifyData (FFAPlayerStatsDataPatchRequest) returns (FFAPlayerStatsDataReply);
}

message FFAPlayerStatsDataRequest {
    oneof id {
        datatype.Uuid uuid = 1;
        string username = 2;
    }
}

message FFAPlayerStatsDataPatchRequest {
    oneof id {
        datatype.Uuid uuid = 1;
        string username = 2;
    }
    optional int32 kills = 3;
    optional int32 deaths = 4;
    optional int32 assists = 5;
    optional int32 killstreak = 6;
    optional int32 longest_killstreak = 7;
}

message FFAPlayerStatsDataReply {
    required arcade.ffa.entity.FFAPlayerStats data = 1;
}
